# balanx

./: .gitignore  .gitmodules  Makefile  README.md  moo.local.cfg
client/: LICENSE  client.cabal  default.nix  packages.nix  shell.nix
client/src/: App.hs  Extras.hs  Types.hs
client/src/View/: Nav.hs
common/: common.cabal  packages-ghc.nix  packages-ghcjs.nix
common/src/: Shared.hs
common/src/Channel/: Json.hs  Types.hs
common/src/Common/: Types.hs
common/src/Message/: Json.hs  Types.hs
common/src/Uncanny/: BitMask.hs  Prelude.hs
common/src/User/: Json.hs  Types.hs
migrations/: 2017-08-26_07-12-55_initial.txt  initialize.txt
server/: default.nix  packages.nix  server.cabal  shell.nix
server/src/: App.hs  Logger.hs  Session.hs  Types.hs
server/src/Api/: AuthApi.hs  UserApi.hs
server/src/Database/: Channel.hs  Message.hs  User.hs  UserChannel.hs
sql/: db_schema.sql
