name:                client
version:             0.0.1.0
synopsis:            Balanx Client
description:         Please see README.md
homepage:            https://github.com/uncannyworks/balanx#readme
license:             Apache
license-file:        LICENSE
author:              Brian Jones
maintainer:          brian@uncannyworks.com
copyright:           Uncanny Works
category:            AI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Extras
                     , Types
                     , View.Nav
  build-depends:       common
                     , base
                     , containers
                     , lens
                     , reflex
                     , reflex-dom
                     , text
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings

executable balanx-client
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       client
                     , base
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
